# wwelcome

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  resource.qrc  settings_widget.cpp  settings_widget.h  settings_widget.ui  welcome_window.cpp  welcome_window.h  welcome_window.ui
